<resources>
    <string name="app_name">Cloudypics</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="user_name">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="back">Volver</string>
    <string name="enter">Entrar</string>
    <string name="sign_in">Registrarse</string>
    <string name="key">Código</string>
    <string name="title_activity_pictures">Fotos</string>
    <string name="take_photo">Hacer foto</string>
    <string name="logout">Salir</string>
</resources>
